Combined tableview with tabview

--- a/macpawCV/Base.lproj/Main.storyboard
+++ b/macpawCV/Base.lproj/Main.storyboard
@@ -707,7 +707,7 @@
                 <splitViewController id="Nln-ou-Kai" customClass="SplitViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
                     <splitViewItems>
                         <splitViewItem id="dnD-n2-dEb"/>
-                        <splitViewItem id="luB-jU-sjv"/>
+                        <splitViewItem id="KZ6-EZ-N3t"/>
                     </splitViewItems>
                     <splitView key="splitView" dividerStyle="thin" vertical="YES" id="7rp-ZX-3Q5">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
@@ -719,7 +719,7 @@
                     <connections>
                         <outlet property="splitView" destination="7rp-ZX-3Q5" id="R2Z-ej-51v"/>
                         <segue destination="rme-jy-f8S" kind="relationship" relationship="splitItems" id="9fr-xu-KGf"/>
-                        <segue destination="33n-mI-RJQ" kind="relationship" relationship="splitItems" id="QYP-qt-B8k"/>
+                        <segue destination="WA8-si-eqL" kind="relationship" relationship="splitItems" id="E41-IH-kVm"/>
                     </connections>
                 </splitViewController>
                 <customObject id="DAz-Nb-XeA" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -731,18 +731,18 @@
             <objects>
                 <viewController storyboardIdentifier="table" id="rme-jy-f8S" customClass="TableViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="lVI-bI-yin">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="401"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJS-7H-aPb">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="301"/>
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="402"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <clipView key="contentView" ambiguous="YES" id="Vl1-to-npp">
-                                    <rect key="frame" x="1" y="1" width="198" height="299"/>
+                                    <rect key="frame" x="1" y="1" width="198" height="400"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="cGB-22-oie">
-                                            <rect key="frame" x="0.0" y="0.0" width="198" height="299"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="198" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -802,34 +802,108 @@
                 </viewController>
                 <customObject id="Jjk-i0-mkI" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="572" y="423"/>
+            <point key="canvasLocation" x="530" y="389.5"/>
         </scene>
-        <!--Description View Controller-->
-        <scene sceneID="C3C-Zh-WC5">
+        <!--Tab View Controller-->
+        <scene sceneID="rmk-4E-nDy">
             <objects>
-                <viewController storyboardIdentifier="Desc" id="33n-mI-RJQ" customClass="DescriptionViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="es7-NS-gbW">
-                        <rect key="frame" x="0.0" y="0.0" width="301" height="300"/>
+                <tabViewController selectedTabViewItemIndex="0" tabStyle="unspecified" canPropagateSelectedChildViewControllerTitle="NO" id="WA8-si-eqL" customClass="TabViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabViewItems>
+                        <tabViewItem identifier="1" id="ALn-8X-M6y"/>
+                        <tabViewItem identifier="2" id="MsX-Gn-eiU"/>
+                        <tabViewItem identifier="3" id="11t-gV-eLN"/>
+                    </tabViewItems>
+                    <tabView key="tabView" type="noTabsNoBorder" id="SEp-xj-St0">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <font key="font" metaFont="message"/>
+                        <connections>
+                            <outlet property="delegate" destination="WA8-si-eqL" id="e0y-J7-bXK"/>
+                        </connections>
+                    </tabView>
+                    <connections>
+                        <outlet property="tabView" destination="SEp-xj-St0" id="751-9i-Y5p"/>
+                        <outlet property="tabViewItem" destination="SEp-xj-St0" id="L5v-gQ-c87"/>
+                        <segue destination="ZhG-hG-Qdo" kind="relationship" relationship="tabItems" id="kCJ-4d-pKX"/>
+                        <segue destination="A6N-xW-anD" kind="relationship" relationship="tabItems" id="j79-6h-7WW"/>
+                        <segue destination="1UE-3Y-Q1Y" kind="relationship" relationship="tabItems" id="YNb-pF-XlN"/>
+                    </connections>
+                </tabViewController>
+                <customObject id="Ou1-7s-bs7" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="622" y="823"/>
+        </scene>
+        <!--FirstViewController-->
+        <scene sceneID="rjw-3u-QB0">
+            <objects>
+                <viewController title="FirstViewController" storyboardIdentifier="FirstVC" id="ZhG-hG-Qdo" customClass="GeneralInformationViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="oQ5-gb-DCn">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RIl-7I-m4c">
-                                <rect key="frame" x="-2" y="202" width="305" height="98"/>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WHS-tx-huN">
+                                <rect key="frame" x="143" y="184" width="91" height="63"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="left" title="Description" id="jzL-oM-rd4">
-                                    <font key="font" metaFont="system" size="26"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="First" id="y3i-ir-y8J">
+                                    <font key="font" metaFont="system" size="28"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                         </subviews>
                     </view>
-                    <connections>
-                        <outlet property="descriptionField" destination="RIl-7I-m4c" id="m1x-Ox-hlr"/>
-                    </connections>
                 </viewController>
-                <customObject id="Eti-wz-55J" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="ZIM-of-V9A" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="674.5" y="825"/>
+            <point key="canvasLocation" x="1202" y="823"/>
+        </scene>
+        <!--SecondViewController-->
+        <scene sceneID="2tj-3X-alO">
+            <objects>
+                <viewController title="SecondViewController" storyboardIdentifier="SecondVC" id="A6N-xW-anD" customClass="EducationViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="tUJ-ce-dZJ">
+                        <rect key="frame" x="0.0" y="0.0" width="387" height="243"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MnE-T6-TT1">
+                                <rect key="frame" x="150" y="160" width="97" height="63"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Second" id="YhW-Vi-qPr">
+                                    <font key="font" metaFont="system" size="28"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                    </view>
+                </viewController>
+                <customObject id="AUM-7z-OZ4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="926.5" y="1352.5"/>
+        </scene>
+        <!--ThirdViewController-->
+        <scene sceneID="88z-gn-XJ8">
+            <objects>
+                <viewController title="ThirdViewController" storyboardIdentifier="ThirdVC" id="1UE-3Y-Q1Y" customClass="SkillsViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="42V-64-neF">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lwy-UZ-Qkb">
+                                <rect key="frame" x="221" y="186" width="91" height="63"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Third" id="dzV-ex-paq">
+                                    <font key="font" metaFont="system" size="28"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                    </view>
+                </viewController>
+                <customObject id="ACQ-bl-Ewf" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="238" y="1370"/>
         </scene>
     </scenes>
 </document>
