Fixed size of cell

--- a/macpawCV/Base.lproj/Main.storyboard
+++ b/macpawCV/Base.lproj/Main.storyboard
@@ -687,7 +687,7 @@
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="300"/>
+                        <rect key="contentRect" x="139" y="240" width="537" height="301"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
@@ -699,14 +699,14 @@
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="250"/>
+            <point key="canvasLocation" x="46.5" y="250.5"/>
         </scene>
         <!--Entry View Controller-->
         <scene sceneID="t4y-zn-s8E">
             <objects>
-                <viewController id="Z5t-DE-VZv" customClass="EntryViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="First" id="Z5t-DE-VZv" customClass="EntryViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="XVS-O8-efT">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="477" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xdu-eU-W4k">
@@ -721,7 +721,7 @@
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oif-S3-wNH">
-                                <rect key="frame" x="196" y="230" width="44" height="25"/>
+                                <rect key="frame" x="203" y="225" width="44" height="25"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="CV" id="3zG-HO-LXQ">
                                     <font key="font" metaFont="system" size="25"/>
@@ -737,7 +737,7 @@
                 </viewController>
                 <customObject id="jBb-6f-wBx" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-579" y="898"/>
+            <point key="canvasLocation" x="-565.5" y="898"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Y3R-er-xcv">
@@ -748,7 +748,7 @@
                         <splitViewItem id="KZ6-EZ-N3t"/>
                     </splitViewItems>
                     <splitView key="splitView" dividerStyle="thin" vertical="YES" id="7rp-ZX-3Q5">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="273"/>
+                        <rect key="frame" x="-32" y="0.0" width="482" height="342"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <outlet property="delegate" destination="Nln-ou-Kai" id="SfP-Cc-2La"/>
@@ -762,31 +762,31 @@
                 </splitViewController>
                 <customObject id="DAz-Nb-XeA" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="77" y="882.5"/>
+            <point key="canvasLocation" x="61" y="917"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="HOL-Gp-Qmd">
             <objects>
                 <viewController storyboardIdentifier="table" id="rme-jy-f8S" customClass="TableViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" appearanceType="darkAqua" id="lVI-bI-yin">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="362"/>
+                        <rect key="frame" x="0.0" y="0.0" width="246" height="362"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="57" horizontalPageScroll="10" verticalLineScroll="57" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJS-7H-aPb">
-                                <rect key="frame" x="0.0" y="0.0" width="201" height="362"/>
+                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="43" horizontalPageScroll="10" verticalLineScroll="43" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJS-7H-aPb">
+                                <rect key="frame" x="0.0" y="0.0" width="246" height="362"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <clipView key="contentView" ambiguous="YES" id="Vl1-to-npp">
-                                    <rect key="frame" x="1" y="1" width="199" height="360"/>
+                                    <rect key="frame" x="1" y="1" width="244" height="360"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="55" rowSizeStyle="automatic" viewBased="YES" id="cGB-22-oie">
-                                            <rect key="frame" x="0.0" y="0.0" width="199" height="360"/>
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="41" rowSizeStyle="automatic" viewBased="YES" id="cGB-22-oie">
+                                            <rect key="frame" x="0.0" y="0.0" width="244" height="360"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="196" minWidth="40" maxWidth="1000" id="TwD-11-h6q">
+                                                <tableColumn width="241" minWidth="40" maxWidth="1000" id="TwD-11-h6q">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -800,13 +800,13 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="QBX-9Q-1nq">
-                                                            <rect key="frame" x="1" y="1" width="196" height="55"/>
+                                                            <rect key="frame" x="1" y="1" width="241" height="41"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="SLL-6c-lD0">
-                                                                    <rect key="frame" x="0.0" y="38" width="196" height="17"/>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SLL-6c-lD0">
+                                                                    <rect key="frame" x="0.0" y="-23" width="245" height="64"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="information" id="bQy-HI-Ltm">
-                                                                        <font key="font" metaFont="system"/>
+                                                                        <font key="font" metaFont="system" size="25"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
@@ -815,7 +815,7 @@
                                                             <constraints>
                                                                 <constraint firstItem="SLL-6c-lD0" firstAttribute="top" secondItem="QBX-9Q-1nq" secondAttribute="top" id="9oC-8t-JAG"/>
                                                                 <constraint firstItem="SLL-6c-lD0" firstAttribute="leading" secondItem="QBX-9Q-1nq" secondAttribute="leading" constant="2" id="O6x-Am-z0k"/>
-                                                                <constraint firstItem="SLL-6c-lD0" firstAttribute="centerX" secondItem="QBX-9Q-1nq" secondAttribute="centerX" id="oH8-9R-1LF"/>
+                                                                <constraint firstItem="SLL-6c-lD0" firstAttribute="centerX" secondItem="QBX-9Q-1nq" secondAttribute="centerX" constant="2" id="oH8-9R-1LF"/>
                                                             </constraints>
                                                             <connections>
                                                                 <outlet property="textField" destination="SLL-6c-lD0" id="ywr-Ew-x0O"/>
@@ -828,7 +828,7 @@
                                     </subviews>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="WNn-Fh-2ho">
-                                    <rect key="frame" x="1" y="278" width="199" height="16"/>
+                                    <rect key="frame" x="1" y="345" width="224" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="xcp-zZ-onB">
@@ -844,7 +844,7 @@
                 </viewController>
                 <customObject id="Jjk-i0-mkI" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="539" y="316"/>
+            <point key="canvasLocation" x="562" y="316"/>
         </scene>
         <!--Tab View Controller-->
         <scene sceneID="rmk-4E-nDy">
@@ -881,11 +881,11 @@
             <objects>
                 <viewController title="FirstViewController" storyboardIdentifier="FirstVC" id="ZhG-hG-Qdo" customClass="GeneralInformationViewController" customModule="macpawCV" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="oQ5-gb-DCn">
-                        <rect key="frame" x="0.0" y="0.0" width="332" height="368"/>
+                        <rect key="frame" x="0.0" y="0.0" width="417" height="368"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WHS-tx-huN">
-                                <rect key="frame" x="12" y="217" width="350" height="63"/>
+                                <rect key="frame" x="6" y="276" width="384" height="63"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Full name" id="y3i-ir-y8J">
                                     <font key="font" metaFont="system" size="28"/>
@@ -894,7 +894,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ocn-X6-1Gx">
-                                <rect key="frame" x="12" y="167" width="350" height="63"/>
+                                <rect key="frame" x="9" y="218" width="381" height="63"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="age" id="f0i-mP-3J7">
                                     <font key="font" metaFont="system" size="28"/>
@@ -903,7 +903,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oZt-D3-eLA">
-                                <rect key="frame" x="12" y="96" width="375" height="63"/>
+                                <rect key="frame" x="9" y="147" width="381" height="63"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Email" id="JGH-mo-whX">
                                     <font key="font" metaFont="system" size="28"/>
@@ -912,7 +912,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HTH-gq-PPv">
-                                <rect key="frame" x="12" y="25" width="412" height="63"/>
+                                <rect key="frame" x="6" y="76" width="393" height="63"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Phone number" id="Qmf-z6-zvi">
                                     <font key="font" metaFont="system" size="28"/>
@@ -931,7 +931,7 @@
                 </viewController>
                 <customObject id="ZIM-of-V9A" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1368" y="907"/>
+            <point key="canvasLocation" x="1410.5" y="907"/>
         </scene>
         <!--SecondViewController-->
         <scene sceneID="2tj-3X-alO">
@@ -973,10 +973,10 @@
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RXd-Do-e3D">
-                                                                    <rect key="frame" x="0.0" y="3" width="474" height="40"/>
+                                                                    <rect key="frame" x="0.0" y="-9" width="474" height="52"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Information" id="0ON-uL-ujb">
-                                                                        <font key="font" metaFont="system" size="22"/>
+                                                                        <font key="font" metaFont="system" size="19"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
